# monopoly_game

./: .env  .gitignore  docker-compose.yaml  example.env
backend/: Dockerfile  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 1b553578961d_tablse_for_cards.py  5e387f75b6d6_init_database.py
backend/app/: main.py  settings.py
backend/app/database/: db_helper.py
backend/app/database/models/: __init__.py  tiles.py
backend/app/tiles/: api.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
nginx/conf/: nginx.conf
